# shopify-dagster-duckdb

./: .gitignore  README.md
dagster-project/: pyproject.toml
dagster-project/src/dagster_project/defs/: assets.py
dagster-project/src/my_project/defs/: assets.py
dagster-quickstart/: pyproject.toml
dagster_project/: Untitled.ipynb  pyproject.toml
dagster_project/src/dagster_extract_transform_duckdb/defs/: assets.py
dbt_project/dbt_duckdb/: .user.yml  profiles.yml
dbt_project/dbt_duckdb/models/entities/shopify/: schema.yml
duckdb_database/: database.db
extracted_data_for_parabola/: shopify_order_line_items_raw_data.csv
